--- a/index.html
+++ b/index.html
@@ -713,7 +713,11 @@
         <div class="container py-5 mb-5">
             <div class="bg-white">
                 <div class="owl-carousel vendor-carousel">
-                    <img src="img/vendor-1.jpg" alt="">
+                    <img src="img/zenmind.png" alt="">
+                    <img src="img/scmind.png" alt="">
+                    <img src="img/fedility.png" alt="">
+                    <img src="img/scmple.png" alt="">
+                    <!-- <img src="img/vendor-1.jpg" alt="">
                     <img src="img/vendor-2.jpg" alt="">
                     <img src="img/vendor-3.jpg" alt="">
                     <img src="img/vendor-4.jpg" alt="">
@@ -721,7 +725,7 @@
                     <img src="img/vendor-6.jpg" alt="">
                     <img src="img/vendor-7.jpg" alt="">
                     <img src="img/vendor-8.jpg" alt="">
-                    <img src="img/vendor-9.jpg" alt="">
+                    <img src="img/vendor-9.jpg" alt=""> -->
                 </div>
             </div>
         </div>
