--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
             <a href="index.html" class="navbar-brand p-0">
-                <h1 class="m-0"><i class="fa fa-user-tie me-2"></i>ATA</h1>
+                <div class="text-center">
+                    <h1 class="m-0">
+                        <span class="d-block mb-1 fs-7">ATA</span>
+                        <span class="d-block fs-6">All Things Analytics</span>
+                    </h1>
+                </div>
+                
+                
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
