--- a/service.html
+++ b/service.html
@@ -314,7 +314,12 @@
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary p-4">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>ATA</h1>
+                            <div class="text-center">
+                                <h1 class="m-0">
+                                    <span class="d-block mb-1 fs-7">ATA</span>
+                                    <span class="d-block fs-6">All Things Analytics</span>
+                                </h1>
+                            </div>
                         </a>
                         <p class="mt-3 mb-4">Empowering businesses through advanced analytics solutions. Unlock the full potential of your data with our expertise in Tableau and Business Intelligence.</p>
                         <form action="">
