--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+<meta name="google-site-verification" content="EYrHo9NqDeQjhQ8mwhapWmYiie3JZfVfuNEy_2SGRW0" />
     <meta charset="utf-8">
     <title>ATA - All Things Analytics</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
