--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <title>ATA - All Things Analytics</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
+    <meta content="All Things Analytics Jaipur" name="keywords">
+    <meta content="All Things Analytics" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
